src/app/components/header/burger-menu/burger-menu.module.scss
.noScroll {
  height: calc(100vh);
}

.burgerMenu {
  .burgerButton {
    background: none;
    border: none;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 24px;
    width: 30px;
    padding: 0;
    z-index: 10;
  }

  .burgerIcon {
    width: 30px;
    height: 3px;
    background-color: #333;
    border-radius: 2px;
    transition: all 0.3s linear;
  }

  .menu {
    width: 100vw;
    height: 100vh;
    position: absolute;
    left: 0;
    background-color: var(--light-gray-bg);
    color: var(--primary-font-dark);
    top: 78px;
    z-index: 1;
    overflow-y: auto;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0 auto;
      padding: 32px 16px;
      gap: 20px;

      li {
        display: flex;
        width: 100%;

        &.destinationSection {
          flex-direction: column;

          .destinationsWrapper {
            display: flex;
            flex-direction: row;
          }
        }

        svg {
          margin-right: 8px;
        }

        a,
        h2 {
          font-size: 16px;
          line-height: 18px;
          font-weight: 400;
        }

        .continent {
          margin-left: 24px;
          padding-top: 16px;

          &:not(:last-child) {
            margin-bottom: 24px;
          }

          .wrapper {
            padding-left: 16px;
            border-left: 3px solid var(--color-blue);

            h3 {
              font-size: 18px;
              line-height: 18px;
              font-weight: 600;
              color: var(--color-blue);
            }

            ul {
              display: grid;
              grid-template-columns: repeat(2, 1fr);
              grid-template-rows: repeat(2, 1fr);
              gap: 16px;
              padding: 24px 0;
            }

            a.viewMore {
              color: var(--color-blue);
            }
          }
        }
      }
    }
  }

  footer {
    .followUsLinks {
      display: flex;
      justify-content: center;
      gap: 20px;
      padding: 16px 0;

      a {
        color: var(--color-blue-light);

        svg {
          width: 24px;
          height: 24px;
        }
      }
    }
  }
}

